--- a/index.html
+++ b/index.html
@@ -4,24 +4,37 @@
         <meta charset="UTF-8">
         <title>Form Validation</title>
         <script src="https://unpkg.com/vue/dist/vue.js"></script>
+        <script src="libs/vuelidate.min.js"></script>
+        <script src="libs/validators.min.js"></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="app">
             <h1>Form Validation</h1>
-            <form @submit.prevent="submitform" autocomplete="off">
+            <form @submit.prevent="submitForm" autocomplete="off">
                 <div class="from-group">
                     <label for="name">Name:</label>
-                    <input v-model="form.name" id="name">
+                    <input v-model="$v.form.name.$model" 
+                            id="name"
+                    >
+
+                    <p v-if="$v.form.name.$dirty && $v.form.name.$invalid" class="error-message">The name field is required</p>
+                    <p>Invalid: {{$v.form.name.$invalid}} | Dirty: {{$v.form.name.$dirty}} | Error: {{$v.form.name.$error}}</p>
+                    <!-- $error === $invalid && $dirty -->
                 </div>
 
                 <div class="from-group">
                     <label for="age">Age:</label>
-                    <input v-model="form.age" id="age">
+                    <input v-model.number="$v.form.age.$model" id="age">
+                    <div v-if="$v.form.age.$error">
+                        <p v-if="!$v.form.age.required" class="error-message">The age field is required</p>
+                        <p v-else-if="!$v.form.age.integer" class="error-message">The age field should be an integer</p>
+                        <p v-else-if="!$v.form.age.between" class="error-message">You should be at least 12 and younger than 120 to continue</p>
+                    </div>
                 </div>
 
                 <div>
-                    <button>Submit</button>
+                    <button :disabled="$v.form.$invalid">Submit</button>
                 </div>
             </form>
         </div>
