--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
                 <div class="from-group">
                     <label for="name">Name:</label>
                     <input v-model="$v.form.name.$model" 
+                            :class="{ error: $v.form.name.error, valid: !$v.form.name.$invalid }"
                             id="name"
                     >
 
-                    <p v-if="$v.form.name.$dirty && $v.form.name.$invalid" class="error-message">The name field is required</p>
-                    <p>Invalid: {{$v.form.name.$invalid}} | Dirty: {{$v.form.name.$dirty}} | Error: {{$v.form.name.$error}}</p>
-                    <!-- $error === $invalid && $dirty -->
+                    <p v-if="$v.form.name.$error" class="error-message">The name field is required</p>
                 </div>
 
                 <div class="from-group">
                     <label for="age">Age:</label>
-                    <input v-model.number="$v.form.age.$model" id="age">
+                    <input v-model.number="$v.form.age.$model" 
+                            :class="{ error: $v.form.age.error, valid: !$v.form.age.$invalid }"
+                            id="age"
+                    >
                     <div v-if="$v.form.age.$error">
                         <p v-if="!$v.form.age.required" class="error-message">The age field is required</p>
                         <p v-else-if="!$v.form.age.integer" class="error-message">The age field should be an integer</p>
@@ -34,7 +36,7 @@
                 </div>
 
                 <div>
-                    <button :disabled="$v.form.$invalid">Submit</button>
+                    <button>Submit</button>
                 </div>
             </form>
         </div>
